<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Main Navigation Group -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/service_list_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_24"
            android:title="@string/action_history" />
    </group>

    <!-- Settings & Info -->
    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/notifications" />
        </menu>
    </item>

    <!-- Account Actions -->
    <item android:title="@string/menu_profile">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile_24"
                android:title="@string/menu_profile" />
        </menu>
    </item>

    <!-- Settings & Info -->
    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/about" />
        </menu>
    </item>

</menu>