<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notifications">

        <ListPreference
            app:defaultValue="gorda.driver.NOTIFICATION_VOICE"
            app:entries="@array/notify_entries"
            app:entryValues="@array/notify_values"
            app:key="gorda.driver.NOTIFICATIONS"
            app:icon="@drawable/common_full_open_on_phone"
            app:title="@string/sound"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="gorda.driver.NOTIFICATION_TONE"
            app:entries="@array/notify_assigned_entries"
            app:entryValues="@array/notify_assigned_values"
            app:key="gorda.driver.NOTIFICATION_ASSIGNED"
            app:icon="@drawable/common_full_open_on_phone"
            app:title="@string/sound_assigned"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="gorda.driver.NOTIFICATION_TONE"
            app:entries="@array/notify_canceled_entries"
            app:entryValues="@array/notify_canceled_values"
            app:key="gorda.driver.NOTIFICATION_CANCELED"
            app:icon="@drawable/common_full_open_on_phone"
            app:title="@string/sound_canceled"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

</PreferenceScreen>